[tool.poetry]
name = "repl_python3_Debonshi-Ghost-Bot"
version = "0.1.0"
description = ""
authors = ["Siwan-SR <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
